# Python-Flask-REST-Starter

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  tox.ini
resources/: development.ini  production.ini
src/: app.py  main.py  settings.py  wsgi.py
src/app/: __init__.py  settings.py  wsgi.py
src/app/cli/: __init__.py  manage.py
src/app/ext/: __init__.py
src/app/migrations/: env.py
src/app/migrations/versions/: 90182c57d043_initial_migration.py
src/app/models/: __init__.py  token.py  user.py
src/app/schemas/: __init__.py  token.py  user.py
src/app/urls/: __init__.py
src/app/urls/api/: __init__.py
src/app/urls/api/v1/: __init__.py  accounts.py
src/app/utils/decorators/: __init__.py  authentication.py
src/app/views/: __init__.py  accounts.py
src/application/: __init__.py  application.py  meta.py  migrate.py  serializers.py  settings.py
src/cli/: __init__.py  manage.py
src/controllers/: __init__.py  person.py  root.py
src/models/: __init__.py  person.py  token.py  user.py
src/routes/: __init__.py  person.py  root.py
src/routes/api/: __init__.py  accounts.py
src/schemas/: __init__.py  token.py  user.py
src/serializers/: __init__.py  person.py
src/utils/: __init__.py  database.py  token.py
src/utils/decorators/: __init__.py  authentication.py
src/views/: accounts.py
tests/: base.py  test_accounts.py
tests/solution/: test_accounts.py
tests/unit/cli/: test_user.py
tests/unit/models/: test_token.py  test_user.py
tests/unit/schemas/: test_token.py  test_user.py
